2011-10-24  Deepak Sherveghar  <bpwv64@motorola.com>

        [Qt] fast/events/media-focus-in-standalone-media-document.html fails
        https://bugs.webkit.org/show_bug.cgi?id=70110

        Reviewed by Simon Hausmann.

        Remove media-focus-in-standalone-media-document.html from Qt Skipped test list.

        * platform/qt/Skipped:

2011-10-24  Pavel Feldman  <pfeldman@chromium.org>

        Web Inspector: make view load CSS files upon show.
        https://bugs.webkit.org/show_bug.cgi?id=70696

        Reviewed by Yury Semikhatsky.

        * inspector/view-css-expected.txt: Added.
        * inspector/view-css.html: Added.
        * inspector/view-events-expected.txt:
        * inspector/view-events.html:

2011-10-24  Kosztyo Kristof  <kkristof@inf.u-szeged.hu>

        [Qt] Unreviewed gardening after r98199

        * platform/qt/fast/dom/prototype-inheritance-2-expected.txt:

2011-10-24  Yosifumi Inoue  <yosin@chromium.org>

        [Forms] Setting defaultValue should hide an input placeholder.
        https://bugs.webkit.org/show_bug.cgi?id=70586

        Reviewed by Kent Tamura.

        This test checks "value" attribute (default value) changing in two
        ways, one is using setDefault method and another is setAttribute
        method.

        * fast/forms/placeholder-and-default-value-expected.html: Added. Render text input element with "Default" value.
        * fast/forms/placeholder-and-default-value.html: Added. Render text input element with placeholder attribute and a script to change default value of input element to "Default" from empty.

2011-10-23  Adam Barth  <abarth@webkit.org>

        <img crossorigin> should fail to load when CORS check fails
        https://bugs.webkit.org/show_bug.cgi?id=69732

        Reviewed by Darin Adler.

        Test that images loaded with the crossorigin attribute fail to load if
        the CORS access check doesn't pass.
