@@ -744,6 +744,8 @@ WebInspector.AuditRules.ImageDimensionsRule.prototype = {
 
         function getStyles(nodeIds)
         {
+            if (!nodeIds || !nodeIds.length)
+                doneCallback();
             for (var i = 0; nodeIds && i < nodeIds.length; ++i)
                 WebInspector.cssModel.getStylesAsync(nodeIds[i], undefined, imageStylesReady.bind(this, nodeIds[i], i === nodeIds.length - 1));
         }
