@@ -1,3 +1,15 @@
+2011-10-21  Alexander Pavlov  <apavlov@chromium.org>
+
+        Web Inspector: Audits hang on pages without img[src] elements
+        https://bugs.webkit.org/show_bug.cgi?id=70604
+
+        Reviewed by Pavel Feldman.
+
+        Test: inspector/audits/audits-panel-noimages-functional.html
+
+        * inspector/front-end/AuditRules.js:
+        (WebInspector.AuditRules.ImageDimensionsRule.prototype.doRun.getStyles):
+
 2011-10-24  Deepak Sherveghar  <bpwv64@motorola.com>
 
         [Qt] fast/events/media-focus-in-standalone-media-document.html fails
